Changelog

*6/2/2012:
1. Changed behavior of disconnect from VPN method - 
should never fail, only return true, because if 
the process is no longer running, VPN died on its
own already, and should be allowed to be restarted.