@@ -25,7 +25,7 @@ import android.widget.RemoteViews;
 public class RootVPNService extends Service {
 	
 	private ShellCommand cmd = new ShellCommand();
-	
+	private static String preVPNDNSServer;
 	private static boolean isConnected = false;
 
 	@Override
@@ -158,17 +158,12 @@ public class RootVPNService extends Service {
 		}
 		
 		private boolean turnOnVPN() {
-			ConnectivityManager cm = (ConnectivityManager) context.getSystemService(Context.CONNECTIVITY_SERVICE);
-			NetworkInfo ni = cm.getActiveNetworkInfo();
-			NetworkInfo[] nia = cm.getAllNetworkInfo();
-			int netpreference = cm.getNetworkPreference();
-			//cm.requestRouteToHost(ConnectivityManager.TYPE_ETHERNET, 1 );
-			//cm.setNetworkPreference(1);
-
+			String currentNetworkInterface = getCurrentNetworkInterface();
+			
 			log("Starting mtpd...");
 			
 			//TODO: may also be on wifi (wlan0)
-			cmd.su.run("mtpd rmnet0 pptp " + 
+			cmd.su.run("mtpd " + currentNetworkInterface + " pptp " + 
 					vpnServer + " " + vpnPort + 
 					" name " + vpnUser + 
 					" password " + vpnPassword + 
@@ -189,7 +184,7 @@ public class RootVPNService extends Service {
 
 			if (count < 30) {
 				int exitValues = 0;
-				
+
 				log("route 1st command being issued...");
 				CommandResult r = cmd.su.runWaitFor("ip route add 0.0.0.0/1 dev ppp0");
 				log("route 1st execution code: " + r.exit_value);
@@ -201,23 +196,11 @@ public class RootVPNService extends Service {
 				log("route 2nd execution code: " + r.exit_value);
 
 				exitValues = exitValues + r.exit_value;
-				
-				log("getting DNS server to use for VPN server's IP"); 
-				//r = cmd.su.runWaitFor("ip route | grep 'dev ppp0  proto kernel'");
-				r = cmd.su.runWaitFor("/system/bin/sh -c 'ip route | grep \"dev ppp0  proto kernel\"'");
-				result = r.stdout;
-				log("got DNS server from ip route: " + result);
-				StringTokenizer tokenizer = new StringTokenizer(result, " ");
-				String dnsServer = tokenizer.nextToken();
 
-				exitValues = exitValues + r.exit_value;
+				setPreVPNDNSServer();
+				String pppDNSServer = getPPPDNSServer();
+				setDNS(pppDNSServer);
 				
-				log("setting DNS server to VPN server's IP");
-				r = cmd.su.runWaitFor("setprop net.dns1 " + dnsServer);
-				log("got DNS server from ip route: " + r.exit_value);
-				
-				exitValues = exitValues + r.exit_value;
-
 				if (exitValues == 0) {
 					log("VPN connection started: success, returning true.");
 					return true;
@@ -233,16 +216,69 @@ public class RootVPNService extends Service {
 			}
 		}
 		
+		private String getCurrentNetworkInterface() {
+			String result = cmd.su.runWaitFor("/system/bin/sh -c 'ip route | grep default'").stdout;
+			StringTokenizer tokenizer = new StringTokenizer(result, " ");
+			
+			int tokens = 0;
+			while (tokens < 5) {
+				result = tokenizer.nextToken();
+				tokens++;
+			}
+			log("got current network interface: " + result);
+		
+			return result;
+		}
+		
+		private String getPPPDNSServer() {
+			log("getting DNS server to use for VPN server's IP"); 
+			String result = cmd.su.runWaitFor("/system/bin/sh -c 'ip route | grep \"dev ppp0  proto kernel\"'").stdout;
+			log("got DNS server from ip route: " + result);
+			StringTokenizer tokenizer = new StringTokenizer(result, " ");
+			String dnsServer = tokenizer.nextToken();
+
+			log("got DNS server from ip route: " + dnsServer);
+			return dnsServer;
+		}
+		
+		private void setPreVPNDNSServer() {
+			log("getting DNS server system was using before VPN"); 
+			String result = cmd.su.runWaitFor("/system/bin/sh -c 'getprop net.dns1'").stdout;
+			log("got pre-VPN DNS server from ip route: " + result);
+			StringTokenizer tokenizer = new StringTokenizer(result, " ");
+			String dnsServer = tokenizer.nextToken();
+
+			log("got pre-VPN DNS server from ip route: " + dnsServer);
+			preVPNDNSServer = dnsServer;
+		}
+		
+		private void resetDNS() {
+			setDNS(preVPNDNSServer);
+		}
+		
+		private void setDNS(String dnsValue) {
+			log("setting DNS server to: " + dnsValue);
+			CommandResult r = cmd.su.runWaitFor("setprop net.dns1 " + dnsValue);
+			log("set DNS server from ip route: " + dnsValue);
+			
+			incrementDNSChangeValue();
+		}
+		
+		private void incrementDNSChangeValue() {
+			log("getting DNS increment value"); 
+			String result = cmd.su.runWaitFor("getprop net.dnschange").stdout;
+			log("got dnschange value: " + result);
+			
+			Integer intValue = Integer.parseInt(result);
+			int dnsChange = intValue.intValue();
+			dnsChange++;
+			
+			log("setting DNS increment value"); 
+			result = cmd.su.runWaitFor("setprop net.dnschange " + dnsChange).stdout;
+			log("set dnschange value: " + dnsChange);
+		}
+		
 		private boolean turnOffVPN() {
-			ConnectivityManager cm = (ConnectivityManager) context.getSystemService(Context.CONNECTIVITY_SERVICE);
-			NetworkInfo ni = cm.getActiveNetworkInfo();
-			NetworkInfo[] nia = cm.getAllNetworkInfo();
-			int netpreference = cm.getNetworkPreference();
-			//cm.requestRouteToHost(ConnectivityManager.TYPE_ETHERNET, 1 );
-			//cm.setNetworkPreference(1);
-			
-			int exitValues = 0;
-			
 			CommandResult r = cmd.su.runWaitFor("pidof mtpd");
 			log("pidof execution code: " + r.exit_value);
 			
@@ -259,28 +295,11 @@ public class RootVPNService extends Service {
 				log("VPN connection terminated: fail, returning false.");
 			}
 			
-			//TODO: (or Wifi value)
-			log("getting mobile DNS server to use for DNS ");
-			r = cmd.su.runWaitFor("getprop net.rmnet0.dns1");
-			String result = r.stdout;
-			log("got DNS server from system properties: " + result);
-
-			exitValues = exitValues + r.exit_value;
+			resetDNS();
 			
-			log("setting DNS server mobile DNS server");
-			r = cmd.su.runWaitFor("setprop net.dns1 " + result);
-			log("set net.dns1 propery success: " + r.exit_value);
+			log("VPN connection stopped: success, returning true.");
 			
-			exitValues = exitValues + r.exit_value;
-			
-			if (exitValues == 0) {
-				log("VPN connection stopped: success, returning true.");
-				return true;
-			}
-			else {
-				log("VPN connection stopped: fail, returning false.");
-				return false;
-			}
+			return true;
 		}
 		
 		private void sleep(int seconds) {
